[build-system]
requires = ["setuptools>=61.2", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "cbrf"
readme = "ReadMe.md"
description = "A library get currency exchange rates from CentroBank of Russian Federation"
authors = [{name = "KOLANICH"}]
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"Intended Audience :: Other Audience",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["currency", "exchange", "ratio"]
license = {text = "Unlicense"}
requires-python = ">=3.4"
dynamic = ["version"]
dependencies = [
	"ratelimit",
	"beautifulsoup4",
	"Cache", # @ git+https://codeberg.org/KOLANICH-libs/Cache.py.git
	"httpx",
	"lxml"
]

[project.optional-dependencies]
"pint" = ["pint"]
"money" = ["money"]

[project.urls]
Homepage = "https://codeberg.org/KOLANICH-libs/cbrf.py"

[tool.setuptools]
zip-safe = true
py-modules = ["cbrf"]
include-package-data = false

[tool.setuptools_scm]
